--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,18 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+  - repo: https://github.com/stephendavid77/opal-dev-tools
+    rev: main
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-
-  - repo: https://github.com/stephendavid77/opal-dev-tools
-    rev: main
-    hooks:
+      - id: black
+      - id: isort
+      - id: flake8
+      - id: mypy
+      - id: bandit
+      - id: eslint
+      - id: prettier
       - id: check-dependencies
-        name: Check Architectural Dependencies
-        entry: python -m architecture-checks.check_dependencies
-        language: system
-        pass_filenames: false
       - id: check-imports
-        name: Check Architectural Imports
-        entry: python -m architecture-checks.check_imports
-        language: system
-        pass_filenames: false
       - id: check-structure
-        name: Check Architectural Structure
-        entry: python -m architecture-checks.check_structure
-        language: system
-        pass_filenames: false
